PQ-69 Add user profile section (#42)
Co-authored-by: Ion Bostan <i.bostan@intetics.com>